--- a/shared/elements/gaia_pin_card/style.css
+++ b/shared/elements/gaia_pin_card/style.css
@@ -1,8 +1,8 @@
-
 .pin-card {
   position: relative;
   float: left;
   min-width: 14rem;
+  width: 100%;
   height: 10.5rem;
   border-radius: .5rem;
   background-color: #FBFBFB;
